refactor: entity utils